Trying to cleanup JVM options...